@@ -63,7 +63,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © 2020-2022 Michal Josef Špaček
+    © 2020-2023 Michal Josef Špaček
 
     BSD 2-Clause License
 
