@@ -2,6 +2,7 @@
  - Add references to MediainfoStatement.
  - Add Sense object.
  - Add support for sense to Value.
+ - Update copyright years.
 
 0.09 2022-07-09T16:51:15+02:00
  - Add complex test to Lexeme.
